--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
@@ -50,97 +50,89 @@
        <br><br><br><br><br>
      </div>
 
+     <h2 class="class-header">Franklin High School Computer Science</h2>
+    
      <p>Welcome to the Computer Science Pathway at Franklin High School.
         My name is Mr. Dagler, and I am the teacher for this pathway.
         At this website, you will find a description for all of the classes I teach and how I connect my students to industry partners: <b>guest speakers, field trips, coding camps, and computations</b>.
      </p>
 
      <p>There are two options for this pathway: a programming one and a web-development one.
-        The programming pathway requires you to take exploring computer science, <a href="apcs_a.html">AP Computer Science A</a> and <a href="apcs_p.html">AP Computer Science Principles</a> in order.
-        Where, the web-development pathway requres you to take <a href="ecs.html">Exploring Computer Science</a>, <a href="web1.html">Web-Development 1</a> and <a href="web2.html">Web-Development 2</a> in order.
+        The programming pathway requires you to take exploring computer science, <a class="link" href="apcs_a.html">AP Computer Science A</a> and <a class="link" href="apcs_p.html">AP Computer Science Principles</a> in order.
+        Where, the web-development pathway requres you to take <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="web1.html">Web-Development 1</a> and <a class="link" href="web2.html">Web-Development 2</a> in order.
         You will earn _________ if you take one additional computer science course in either pathway and receive a graduation cord.
-        If you are interested in my classes or have any other questions, please contact me at <a href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a>.
+        If you are interested in my classes or have any other questions, please contact me at <a class="link" href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a>.
      </p>
   </div>
 
-  <br>
-
   <div class="container">
-    <br>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>Exploring Computer Science</h4>
           <p>Discover the vast world of computer science
-             • Learn the command line interface •
-             Develop problem-solving skills and techniques
-             • Program using the C language •
-             Create code for modular robotics
+             • Learn the command line interface 
+             • Develop problem-solving skills and techniques
+             • Program using the C language 
+             • Create code for modular robotics
              • Compete at a statewide programming/robotics competition.
           </p>
           <a href="ecs.html" class="btn btn-purple">Read More</a>
           <a href="https://github.com/class-handouts/ECS/" class="btn btn-purple">Handouts</a>
       </div>
 
-
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>AP Computer Science A</h4>
           <p>Learn content equivalent to a first-semester college-level course in CS
-             • Learn object-oriented programming using the Java language •
-             Solve problems by developing algorithms and using data structures
-             • Compete at HP CodeWars •
-             Earn a 5.0 GPA bump and college credit by taking the AP test.
+             • Learn object-oriented programming using the Java language 
+             • Solve problems by developing algorithms and using data structures
+             • Compete at HP CodeWars 
+             • Earn a 5.0 GPA bump and college credit by taking the AP test.
           </p>
           <a href="apcs_a.html" class="btn btn-purple">Read More</a>
           <a href="https://github.com/class-handouts/APCS_A/" class="btn btn-purple">Handouts</a>
       </div>
 
-
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>AP Computer Science Principles</h4>
           <p>Explore how computing and technology is impacting us today through a project-based approach
-             • Address real-world problems involving Big Data and Cybersecurity •
-             Earn a 5.0 GPA bump and college credit by taking the AP test.
+             • Address real-world problems involving Big Data and Cybersecurity 
+             • Earn a 5.0 GPA bump and college credit by taking the AP test.
           </p>
           <a href="apcs_p.html" class="btn btn-purple">Read More</a>
           <a href="https://github.com/class-handouts/APCS_P/" class="btn btn-purple">Handouts</a>
       </div>
 
-
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>Web Design and Development 1</h4>
-          <p>Develop web sites using Hypertext Markup Language version 5 (<i>HTML5</i>) and Cascading Style Sheets (<i>CSS</i>).
-             • Insert images, create hyperlinks, add tables, forms, videos and audio to Web pages •
-             Use <i>HTML5</i> Application Programming Interfaces (APIs)
-             • Validating HTML code •
-             Recognizing the importance of search engine optimization (SEO)
-             • Implementing fundamental design concepts •
-             Intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
+          <p>Develop web sites using <i>HTML5</i> and <i>CSS</i>
+             • Insert images, create hyperlinks, add tables, forms, videos and audio to Web pages 
+             • Validating HTML code 
+             • Search Engine Optimization (SEO)
+             • Implementing fundamental design concepts 
+             • Intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
           </p>
           <a href="web1.html" class="btn btn-purple">Read More</a>
           <a href="https://github.com/class-handouts/Web1/" class="btn btn-purple">Handouts</a>
       </div>
 
-
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>Web Design and Development 2</h4>
-          <p> Essentials of <i>HTML5</i>, Cascading Style Sheets (<i>CSS</i>) and JavaScript (<i>JS</i>)
-             • Create Web pages using <i>HTML5</i> structure elements •
-             Embed video and audio
-             • Develop cross-browser user-input forms •
-             Use <i>CSS3</i> to position and format content, and to create effects
-             • Learn basic JavaScript coding to extend the functionality of Web pages with modern features •
-             Learn techniques for code validation and testing, form creation, inline form field validation, and mobile design for browsers and apps
+          <p> Essentials of <i>HTML5</i>, <i>CSS</i> and <i>JS</i>
+             • Embed video and audio
+             • Develop cross-browser user-input forms 
+             • Use <i>CSS3</i>
+             • Learn basic JavaScript coding to extend the functionality of Web pages with modern features 
+             • Code validation and testing, form creation, and mobile design
              • Intro to <i>FlexBox</i>, <i>CSS</i> grid layout, <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
           </p>
           <a href="web2.html" class="btn btn-purple">Read More</a>
           <a href="https://github.com/class-handouts/Web2" class="btn btn-purple">Handouts</a>
       </div>
-
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
@@ -152,7 +144,6 @@
       </div>
     </div>
   </div>
-
   <br>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
