--- a/indcon.html
+++ b/indcon.html
@@ -21,7 +21,7 @@
 
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
@@ -45,29 +45,25 @@
 
   <br>
 
-
   <div class="container">
     <div class="jumbotron">
       <br><br><br><br><br>
     </div>
+    <h2 class="class-header">Industry Connections</h2>
+    <br>
+    <h4>Contact Information</h4>
+    <div class="row">
+      <p class="col-md-4">Teacher: Mr. Dagler</p>
+      <p class="col-md-4">Email: mrdagler@csfhs.net</p>
+      <p class="col-md-4">Voicemail: (916) 714-8150 x 41912</p>
+    </div>
   </div>
+
+  <br>
 
 
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-  <footer class="fixed-footer">
-    <div class="container">
-      <br>
-      <h2>Contact Information</h2>
-      <div class="row">
-        <h4 class="col-md-3">Teacher: Mr. Dagler</h4>
-        <h4 class="col-md-3">Class Handouts: <a href="bit.ly/mrdaglger_web1">bit.ly/mrdagler_web1</a></h4>
-        <h4 class="col-md-3">Email: mrdagler@csfhs.net</h4>
-        <h4 class="col-md-3">Voicemail: (916) 714-8150 x 41912</h4>
-      </div>
-      <br>
-    </div>
-  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
