--- a/apcs_a.html
+++ b/apcs_a.html
@@ -49,7 +49,8 @@
 
      <div class="container">
        <br>
-       <h4>AP Computer Science A</h4>
+       <h2 class="class-header">AP Computer Science A</h2>
+       <br>
        <h4>Contact Information</h4>
        <div class="row">
          <p class="col-md-4">Teacher: Mr. Dagler</p>
