--- a/apcs_p.html
+++ b/apcs_p.html
@@ -49,8 +49,8 @@
   </div>
 
   <div class="container">
+    <h2 class="class-header">AP Computer Science Principles</h2>
     <br>
-    <h4>AP Computer Science Principles</h4>
     <h4>Contact Information</h4>
     <div class="row">
       <p class="col-md-4">Teacher: Mr. Dagler</p>
