--- a/ecs.html
+++ b/ecs.html
@@ -46,8 +46,8 @@
     <div class="jumbotron">
       <br><br><br><br><br>
     </div>
+    <h2 class="class-header">Exploring Computer Science</h2>
     <br>
-    <h4>Exploring Computer Science</h4>
     <h4>Contact Information</h4>
     <div class="row">
       <p class="col-md-4">Teacher: Mr. Dagler</p>
