--- a/apcs_p.html
+++ b/apcs_p.html
@@ -75,8 +75,16 @@
         <p>All school and district rules/policies are expected and enforced. The two most important rules to me are:
         you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.
         </p>
-        <br>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-5">
+        <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
+      </div>
+
+      <div class="col-md-7">
+        <h4>PRIDE</h4>
         <ul class="list-group">
           <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
           <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
@@ -85,9 +93,6 @@
           <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
         </ul>
       </div>
-
-      <br>
-
     </div>
   </div>
 
