--- a/indcon.html
+++ b/indcon.html
@@ -57,12 +57,26 @@
       <p class="col-md-4">Email: mrdagler@csfhs.net</p>
       <p class="col-md-4">Voicemail: (916) 714-8150 x 41912</p>
     </div>
+
+    <div class="row">
+      <div class="col-md-5">
+        <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
+      </div>
+
+      <div class="col-md-7">
+        <h4>PRIDE</h4>
+        <ul class="list-group">
+          <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
+          <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
+          <li class="list-group-item"><b>Integrity -</b> Be honest, sincere, and kind in words and actions.</li>
+          <li class="list-group-item"><b>Determination -</b> Set goals and meet expectations.</li>
+          <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <br>
-
-
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
