--- a/web2.html
+++ b/web2.html
@@ -77,7 +77,15 @@
         <p>All school and district rules/policies are expected and enforced. The two most important rules to me are:
         you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.
         </p>
-        <br>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-5">
+        <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
+      </div>
+
+      <div class="col-md-7">
         <h4>PRIDE</h4>
         <ul class="list-group">
           <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
@@ -87,10 +95,9 @@
           <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
         </ul>
       </div>
-      <br>
     </div>
   </div>
-  <br>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
