--- a/apcs_a.html
+++ b/apcs_a.html
@@ -73,24 +73,32 @@
            <h4> Class Policies: </h4>
            <p>All school and district rules/policies are expected and enforced.
               The two most importatn rules to me are: you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.</p>
-           <br>
+         </div>
+       </div>
 
-             <ul class="list-group">
-               <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
-               <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
-               <li class="list-group-item"><b>Integrity -</b> Be honest, sincere, and kind in words and actions.</li>
-               <li class="list-group-item"><b>Determination -</b> Set goals and meet expectations.</li>
-               <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
-             </ul>
+       <div class="row">
+         <div class="col-md-5">
+           <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
+         </div>
 
-             <h4>The Computer Science Pathway: </h4>
-             <p>This course is part of a three-year computer science pathway.
-                The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
-                Each of these courses is a prerequisite of the one before it. </p>
-            </div>
+         <div class="col-md-7">
+           <h4>PRIDE</h4>
+           <ul class="list-group">
+             <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
+             <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
+             <li class="list-group-item"><b>Integrity -</b> Be honest, sincere, and kind in words and actions.</li>
+             <li class="list-group-item"><b>Determination -</b> Set goals and meet expectations.</li>
+             <li class="list-group-item"><b>Empathy -</b> Show the ability to understand and share the feelings of another.</li>
+           </ul>
+         </div>
+       </div>
 
-        </div>
-    </div>
+       <br>
+
+       <h4>The Computer Science Pathway: </h4>
+       <p>This course is part of a three-year computer science pathway.
+          The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
+          Each of these courses is a prerequisite of the one before it. </p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
