--- a/ecs.html
+++ b/ecs.html
@@ -79,6 +79,7 @@
       </div>
 
       <div class="col-md-7">
+        <h4>PRIDE</h4>
         <ul class="list-group">
           <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
           <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
