--- a/apcs_a.html
+++ b/apcs_a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dagler</title>
+  <title>AP Computer Science A</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,9 +58,7 @@
          <p class="col-md-4">Voicemail: (916) 714-8150 x 41912</p>
        </div>
        <br>
-     </div>
 
-     <div class="container">
        <div class="row">
          <div class="col-md-8">
            <h4>Course Overview</h4>
@@ -70,13 +68,15 @@
               A minimum of 20 hours for hands on lab experiences are also part of the course.
               Discussions on the ethical and social implications of computers including protection of privacy, intellectual property, and public safety will be included throughout the school year.</p>
            <br>
-           <h4> Class Policies: </h4>
-           <p>All school and district rules/policies are expected and enforced.
-              The two most importatn rules to me are: you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.</p>
          </div>
        </div>
 
        <div class="row">
+         <h4>The Computer Science Pathway: </h4>
+         <p>This course is part of a three-year computer science pathway.
+            The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
+            Each of these courses is a prerequisite of the one before it. </p>
+
          <div class="col-md-5">
            <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
          </div>
@@ -94,11 +94,6 @@
        </div>
 
        <br>
-
-       <h4>The Computer Science Pathway: </h4>
-       <p>This course is part of a three-year computer science pathway.
-          The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
-          Each of these courses is a prerequisite of the one before it. </p>
   </div>
 
   <br>
