--- a/apcs_p.html
+++ b/apcs_p.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dagler</title>
+  <title>AP Computer Science Principles</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,10 +71,6 @@
            The course engages students in the creative aspects of the field by allowing them to develop computational artifacts based on their interests.
            Students will also develop effective communication and collaboration skills by working individually and collaboratively to solve problems and will discuss and write about the impacts these solutions could have on their community, society, and the world.</p>
         <br>
-        <h4>Class Policies</h4>
-        <p>All school and district rules/policies are expected and enforced. The two most important rules to me are:
-        you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.
-        </p>
       </div>
     </div>
 
