--- a/web2.html
+++ b/web2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dagler</title>
+  <title>Web Development 2</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -73,10 +73,6 @@
           Additional topics include <i>FlexBox</i>, <i>CSS</i> grid layout, intro to <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
         </p>
         <br>
-        <h4>Class Policies</h4>
-        <p>All school and district rules/policies are expected and enforced. The two most important rules to me are:
-        you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.
-        </p>
       </div>
     </div>
 
