--- a/ecs.html
+++ b/ecs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dagler</title>
+  <title>Exploring Computer Science</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,14 +66,16 @@
           The six central units are Human Computer Interaction, Problem Solving, Web Design, Command Line Interface, Programming, and Robotics.
         </p>
         <br>
-        <h4> Class Policies: </h4>
-        <p>All school and district rules/policies are expected and enforced.
-          The two most importatn rules to me are: you are respectful to yourself and others, and you are engaged and learning the material we are working on in the class.</p>
-        <br>
       </div>
     </div>
 
     <div class="row">
+
+      <h4>The Computer Science Pathway: </h4>
+      <p>This course is part of a three-year computer science pathway.
+        The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
+        Each of these courses is a prerequisite of the one before it. </p>
+        
       <div class="col-md-5">
         <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
       </div>
@@ -92,14 +94,10 @@
 
     <br>
 
-    <h4>The Computer Science Pathway: </h4>
-    <p>This course is part of a three-year computer science pathway.
-      The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
-      Each of these courses is a prerequisite of the one before it. </p>
   </div>
 
   <br>
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
