--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dagler</title>
+  <title>Home</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,9 +21,9 @@
 
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
+        </li>-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Classes
@@ -57,12 +57,13 @@
         At this website, you will find a description for all of the classes I teach and how I connect my students to industry partners: <b>guest speakers, field trips, coding camps, and computations</b>.
      </p>
 
-     <p>There are two options for this pathway: a programming one and a web-development one.
-        The programming pathway requires you to take exploring computer science, <a class="link" href="apcs_a.html">AP Computer Science A</a> and <a class="link" href="apcs_p.html">AP Computer Science Principles</a> in order.
-        Where, the web-development pathway requres you to take <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="web1.html">Web-Development 1</a> and <a class="link" href="web2.html">Web-Development 2</a> in order.
-        You will earn _________ if you take one additional computer science course in either pathway and receive a graduation cord.
-        If you are interested in my classes or have any other questions, please contact me at <a class="link" href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a>.
+     <p>Programming and web-development are the two pathways I offer.
+        The three year sequence for the programming pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="apcs_a.html">AP Computer Science A</a> and <a class="link" href="apcs_p.html">AP Computer Science Principles</a>.
+        And the three year sequence for the the web-development pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="web1.html">Web-Development 1</a> and <a class="link" href="web2.html">Web-Development 2</a>.
+        You will earn a graduation cord when you take one additional course in either pathway.
+        If you are interested in my classes or have any other questions, please contact me at <a href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a> or (916) 714-8150 x 41912.
      </p>
+
   </div>
 
   <div class="container">
@@ -78,7 +79,7 @@
              • Compete at a statewide programming/robotics competition.
           </p>
           <a href="ecs.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/ECS/" class="btn btn-purple">Handouts</a>
+          <a href="https://github.com/class-handouts/Web1/blob/master/readme.md" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -91,7 +92,7 @@
              • Earn a 5.0 GPA bump and college credit by taking the AP test.
           </p>
           <a href="apcs_a.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/APCS_A/" class="btn btn-purple">Handouts</a>
+          <a href="https://github.com/class-handouts/APCS_A/blob/master/readme.md" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -102,7 +103,7 @@
              • Earn a 5.0 GPA bump and college credit by taking the AP test.
           </p>
           <a href="apcs_p.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/APCS_P/" class="btn btn-purple">Handouts</a>
+          <a href="https://github.com/class-handouts/APCS_P/blob/master/readme.md" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -116,22 +117,19 @@
              • Intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
           </p>
           <a href="web1.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/Web1/" class="btn btn-purple">Handouts</a>
+          <a href="https://github.com/class-handouts/Web1/blob/master/readme.md" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <br>
           <h4>Web Design and Development 2</h4>
-          <p> Essentials of <i>HTML5</i>, <i>CSS</i> and <i>JS</i>
-             • Embed video and audio
-             • Develop cross-browser user-input forms
-             • Use <i>CSS3</i>
-             • Learn basic JavaScript coding to extend the functionality of Web pages with modern features
-             • Code validation and testing, form creation, and mobile design
-             • Intro to <i>FlexBox</i>, <i>CSS</i> grid layout, <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
+          <p>Essentials of <i>HTML5</i>, <i>CSS</i> and <i>JavaScript</i>
+            • Embed video and audio • Develop cross-browser user-input forms
+            • Use <i>CSS3</i> • Code validation and testing, form creation, and mobile design
+            • Intro to <i>FlexBox</i>, <i>CSS</i> grid layout, <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js</i>.
           </p>
           <a href="web2.html" class="btn btn-purple">Read More</a>
-          <a href="https://github.com/class-handouts/Web2" class="btn btn-purple">Handouts</a>
+          <a href="https://github.com/class-handouts/Web2/blob/master/readme.md" class="btn btn-purple">Handouts</a>
       </div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
@@ -146,7 +144,7 @@
   </div>
 
   <br>
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
