--- a/ecs.html
+++ b/ecs.html
@@ -15,16 +15,17 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="index.html">Franklin High School Computer Science</a>
+    <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</li></a>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Classes</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Classes
+          </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item active" href="ecs.html">Exploring Computer Science <span class="sr-only">(current)</span></a>
             <a class="dropdown-item" href="apcs_a.html">AP Computer Science A</a>
@@ -59,7 +60,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-12">
         <h4>Course Overview:</h4>
         <p>Exploring Computer Science is a high school introduction to the world of computer scienc and problem solving.
           The three strains interwoven throughout this course are computer science concepts, inquiry, and equity.
