--- a/apcs_a.html
+++ b/apcs_a.html
@@ -15,16 +15,17 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="index.html">Franklin High School Computer Science</a>
+      <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</li></a>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Classes</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Classes
+          </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="ecs.html">Exploring Computer Science</a>
             <a class="dropdown-item active" href="apcs_a.html">AP Computer Science A<span class="sr-only">(current)</span></a>
@@ -60,7 +61,7 @@
        <br>
 
        <div class="row">
-         <div class="col-md-8">
+         <div class="col-md-12">
            <h4>Course Overview</h4>
            <p>AP Computer Science A is equivalent to a first-semester, college level course in computer science.
               The course introduces problem solving and programming using Java.
