--- a/apcs_a.html
+++ b/apcs_a.html
@@ -60,7 +60,7 @@
        <div class="row">
          <div class="col-md-12">
            <h4>Course Overview</h4>
-           <p>AP Computer Science A is equivalent to a first-semester, college level course in computer science.
+           <p>AP Computer Science A is equivalent to the first-semester of a college level course in computer science.
               The course introduces problem solving and programming using Java.
               The topics in this course include: program class design, implementation techniques, programming constructions, Java library classes and interfaces included in the AP java subset, testing, debugging, runtime exceptions, program correctness, algorithm analysis, numerical representations of integers, primitive data types, strings, classes, lists, one and two dimensional arrays, sorting, searching, and operations on data structures.
               A minimum of 20 hours for hands on lab experiences are also part of the course.
