--- a/ecs.html
+++ b/ecs.html
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-md-12">
         <h4>Course Overview:</h4>
-        <p>Exploring Computer Science is a high school introduction to the world of computer scienc and problem solving.
+        <p>Exploring Computer Science is a high school introduction to the world of computer science and problem solving.
           The three strains interwoven throughout this course are computer science concepts, inquiry, and equity.
           The six central units are Human Computer Interaction, Problem Solving, Web Design, Command Line Interface, Programming, and Robotics.
         </p>
@@ -76,7 +76,7 @@
       <p>This course is part of a three-year computer science pathway.
         The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
         Each of these courses is a prerequisite of the one before it. </p>
-        
+
       <div class="col-md-5">
         <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
       </div>
