--- a/web2.html
+++ b/web2.html
@@ -64,7 +64,7 @@
         <h4>Course Overview</h4>
         <p>This course teaches the essentials of <i>HTML5</i>, Cascading Style Sheets (<i>CSS</i>) and JavaScript (<i>JS</i>).
           Students will create Web pages using the <i>HTML5</i> structure elements, embed video and audio, and develop cross-browser user-input forms.
-          They will use <i>CSS3</i> to position and format content, and to create effects such as transformations, transitions and animation.
+          They will use <i>CSS3</i> to position and format content and to create effects such as transformations, transitions and animation.
           They will also learn basic JavaScript coding to extend the functionality of Web pages with modern features such as geolocation, drag-and-drop, canvas and offline Web applications.
           In addition, they will learn techniques for code validation and testing, form creation, inline form field validation, and mobile design for browsers and apps, including Responsive Web Design.
           Additional topics include <i>FlexBox</i>, <i>CSS</i> grid layout, intro to <i>Google Analytics</i>, <i>SASS</i>, and <i>Node.js.</i>
