--- a/apcs_p.html
+++ b/apcs_p.html
@@ -67,7 +67,7 @@
         <h4>Course Overview</h4>
         <p>Welcome to AP Computer Science Principles.
            Here you will find all the handouts you will need.
-           This course is designed to be equivalent to a first-semester introductory college computing course.
+           This course is designed to be equivalent to the first-semester of an introductory college computing course.
            In this course, students will develop computational thinking skills vital for success across all disciplines, such as using computational tools to analyze and study data and working with large datasets to analyze, visualize, and draw conclusions from trends.
            The course engages students in the creative aspects of the field by allowing them to develop computational artifacts based on their interests.
            Students will also develop effective communication and collaboration skills by working individually and collaboratively to solve problems and will discuss and write about the impacts these solutions could have on their community, society, and the world.</p>
