--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
      <p>Welcome to the Computer Science Pathway at Franklin High School.
         My name is Mr. Dagler, and I am the teacher for this pathway.
-        At this website, you will find a description for all of the classes I teach and how I connect my students to industry partners: <b>guest speakers, field trips, coding camps, and computations</b>.
+        In this website, you will find a description for all of the classes I teach and how I connect my students to industry partners: <b>guest speakers, field trips, coding camps, and competitions</b>.
      </p>
 
      <p>Programming and web-development are the two pathways I offer.
-        The three year sequence for the programming pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="apcs_a.html">AP Computer Science A</a> and <a class="link" href="apcs_p.html">AP Computer Science Principles</a>.
-        And the three year sequence for the the web-development pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="web1.html">Web-Development 1</a> and <a class="link" href="web2.html">Web-Development 2</a>.
+        The three year sequence for the programming pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="apcs_p.html">AP Computer Science Principles</a> and <a class="link" href="apcs_a.html">AP Computer Science A</a>.
+        The three year sequence for the the web-development pathway is <a class="link" href="ecs.html">Exploring Computer Science</a>, <a class="link" href="web1.html">Web-Development 1</a> and <a class="link" href="web2.html">Web-Development 2</a>.
         You will earn a graduation cord when you take one additional course in either pathway.
         If you are interested in my classes or have any other questions, please contact me at <a class="link" href="mailto:mrdagler@csfhs.net">mrdagler@csfhs.net</a> or (916) 714-8150 x 41912.
      </p>
