--- a/web1.html
+++ b/web1.html
@@ -65,7 +65,7 @@
         <p>This course teaches students to develop Web sites using Hypertext Markup Language version 5 (<i>HTML5</i>) and Cascading Style Sheets (<i>CSS</i>).
         They'll also insert images, create hyperlinks, and add tables, forms, videos and audio to Web pages, as well as using <i>HTML5</i> Application Programming Interfaces (APIs) to extend the functionality of Web pages.
         Other topics include validating HTML code, recognizing the importance of search engine optimization (SEO), and implementing fundamental design concepts.
-        Additional topics include an intro to <i>JavaScript</i>, Image Maps, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
+        Additional topics include an intro to <i>JavaScript</i>, <i>Image Maps</i>, <i>BootStrap</i>, <i>SVG</i>, and <i>PGP</i>.
         </p>
         <br>
       </div>
