--- a/ecs.html
+++ b/ecs.html
@@ -71,12 +71,15 @@
     </div>
 
     <div class="row">
+      <div class="col-md-12">
+        <h4>The Computer Science Pathway: </h4>
+        <p>This course is part of a three-year computer science pathway.
+          The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
+          Each of these courses is a prerequisite of the one before it. </p>
+      </div>
+    </div>
 
-      <h4>The Computer Science Pathway: </h4>
-      <p>This course is part of a three-year computer science pathway.
-        The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
-        Each of these courses is a prerequisite of the one before it. </p>
-
+    <div class="row">
       <div class="col-md-5">
         <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
       </div>
@@ -92,8 +95,9 @@
         </ul>
       </div>
     </div>
+  </div>
 
-    <br>
+   <br>
 
   </div>
 
