--- a/apcs_a.html
+++ b/apcs_a.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html">Franklin High School Computer Science</a>
-      <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
+    <a class="navbar-brand full-text" href="index.html">Franklin High School Computer Science</a>
+    <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
     </button>
@@ -45,7 +45,7 @@
 
  <div class="container">
      <div class="jumbotron">
-       <br><br><br><br><br>
+       <br><br><br><br><br><br><br>
      </div>
        <h2 class="class-header">AP Computer Science A</h2>
        <br>
@@ -96,7 +96,40 @@
     <br>
    </div>
 
-  <br>
+
+   <div class="container">
+    <h2></h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="./Images/apcs_a_resized/girlswhocode.jpg" alt="Girls Who Code" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="./Images/apcs_a_resized/oracle.jpg" alt="Oracle" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+   </div>
+
+   <br>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
