--- a/apcs_p.html
+++ b/apcs_p.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html">Franklin High School Computer Science</a>
+    <a class="navbar-brand full-text" href="index.html">Franklin High School Computer Science</a>
     <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
