--- a/ecs.html
+++ b/ecs.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html">Franklin High School Computer Science</a>
+    <a class="navbar-brand full-text" href="index.html">Franklin High School Computer Science</a>
     <a class="navbar-brand short-text" href="index.html">FHS Computer Science</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars toggler"></span>
@@ -45,7 +45,7 @@
 
   <div class="container">
     <div class="jumbotron">
-      <br><br><br><br><br>
+      <br><br><br><br><br><br><br>
     </div>
     <h2 class="class-header">Exploring Computer Science</h2>
     <br>
@@ -97,8 +97,53 @@
     </div>
   </div>
 
-   <br>
+  <br>
 
+  <div class="container">
+    <h2></h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="./Images/ec_resized/cstemday.jpg" alt="CSTEM Day" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Images/ec_resized/dmgmori.jpg" alt="DMGMORI" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Images/ec_resized/ecs1.jpg" alt="Exploring Computer Science" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Images/ec_resized/roboplay.jpg" alt="Roboplay" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./Images/ec_resized/robotics.jpg" alt="Robotics" style="width:100%;">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
   </div>
 
   <br>
