--- a/apcs_a.html
+++ b/apcs_a.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="col-md-12">
-        <h4>The Computer Science Pathway: </h4>
+        <h3>The Computer Science Pathway: </h3>
         <p>This course is part of a three-year computer science pathway.
            The courses in order are Exploring Computer Science, AP Computer Science Principles and AP Computer Science A.
            Each of these courses is a prerequisite of the one before it. </p>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="col-md-7">
-        <h4>PRIDE</h4>
+        <h3>PRIDE</h3>
         <ul class="list-group">
           <li class="list-group-item"><b>Preperation -</b> Be ready physically and mentally.</li>
           <li class="list-group-item"><b>Respect -</b> Show consideration, appreciation, and acceptance.</li>
@@ -96,34 +96,52 @@
     <br>
    </div>
 
+   <br>
 
    <div class="container">
-    <h2></h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="apcs_aCarouselIndicators" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#apcs_aCarouselIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#apcs_aCarouselIndicators" data-slide-to="1"></li>
       </ol>
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <div class="item active">
+        <div class="carousel-item active">
           <img src="./Images/apcs_a_resized/girlswhocode.jpg" alt="Girls Who Code" style="width:100%;">
+          <div class="carousel-caption d-none d-md-block transbox">
+            <p>The Girls Who Code club have a Zoom talk with Shannon, A Leadership Recruiter for FaceBook,
+               to learn what it is like to work at one of the coolest worksites in the world
+               and how to get jobs at high end technology companies. </p>
+          </div>
         </div>
 
-        <div class="item">
+        <div class="carousel-item">
           <img src="./Images/apcs_a_resized/oracle.jpg" alt="Oracle" style="width:100%;">
+          <div class="carousel-caption d-none d-md-block transbox">
+            <p>With software developers from Oracle, Our students learn programming in a fun way:
+               Alice, Chuck, My Friend for Programming Music, Fun with Python Programming,
+               Play Soccer with Lego Mindstorms, Programming the Finch Robot in Greenfoot, and Squishy Circuits. </p>
+          </div>
         </div>
+
+        <div class="carousel-item">
+          <img src="./Images/apcs_a_resized/programcompetition.jpg" alt="Programming Competition" style="width:100%;">
+          <div class="carousel-caption d-none d-md-block transbox">
+            <p>Franklin High students compete in a first-class computer programming competition in a high-tech setting,
+               a wide range of programming challenges, plenty of programmer food, music,
+               plus giveaways--all in an exciting, stimulating, and competitive environment. </p>
+          </div>
       </div>
 
       <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
+      <a class="carousel-control-prev" href="#apcs_aCarouselIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
+      <a class="carousel-control-next" href="#apcs_aCarouselIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
