--- a/ecs.html
+++ b/ecs.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-5 pride">
         <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
       </div>
 
@@ -100,47 +100,70 @@
   <br>
 
   <div class="container">
-    <h2></h2>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="ecsCarouselIndicators" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-          <li data-target="#myCarousel" data-slide-to="4"></li>
+          <li data-target="#ecsCarouselIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#ecsCarouselIndicators" data-slide-to="1"></li>
+          <li data-target="#ecsCarouselIndicators" data-slide-to="2"></li>
+          <li data-target="#ecsCarouselIndicators" data-slide-to="3"></li>
+          <li data-target="#ecsCarouselIndicators" data-slide-to="4"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-          <div class="item active">
+          <div class="carousel-item active">
             <img src="./Images/ec_resized/cstemday.jpg" alt="CSTEM Day" style="width:100%;">
+            <div class="carousel-caption d-none d-md-block transbox">
+              <p>One of the best ways to learn something is to teach it.
+                Our students get this opportunity at our annual 5th/6th C-STEM day where
+                my students create lessons, design activities,
+                and teach coding and robotics to local 5th and 6th graders. </p>
+            </div>
           </div>
 
-          <div class="item">
-            <img src="./Images/ec_resized/dmgmori.jpg" alt="DMGMORI" style="width:100%;">
+          <div class="carousel-item">
+            <img src="./Images/ec_resized/dmgmori.jpg" alt="DMG Mori" style="width:100%;">
+            <div class="carousel-caption d-none d-md-block transbox">
+              <p>Students visit DMG Mori to learn how high end milling machines are made in one of the most advanced factories in the world
+                 through automation combined with a highly skilled workforce.</p>
+            </div>
           </div>
 
-          <div class="item">
+          <div class="carousel-item">
             <img src="./Images/ec_resized/ecs1.jpg" alt="Exploring Computer Science" style="width:100%;">
+            <div class="carousel-caption d-none d-md-block transbox">
+              <p>Our students learn that you can be a computer scientist no matter what your background is,
+                 what it is like to be a CS contractor,
+                 and what the pros and cons of being an independent programmer or working for a company are.  </p>
+            </div>
           </div>
 
-          <div class="item">
+          <div class="carousel-item">
             <img src="./Images/ec_resized/roboplay.jpg" alt="Roboplay" style="width:100%;">
+            <div class="carousel-caption d-none d-md-block transbox">
+              <p>Students at Franklin High compete at the RoboPlay Challenge Manufacturing & Automation competition at the UC Davis C-STEM Center.
+                 Students use teamwork, critical thinking, problem solving skills
+                 and programming to solve challenges that were created by local engineers.</p>
+            </div>
           </div>
 
-          <div class="item">
+          <div class="carousel-item">
             <img src="./Images/ec_resized/robotics.jpg" alt="Robotics" style="width:100%;">
+            <div class="carousel-caption d-none d-md-block transbox">
+              <p>Students get an inside look at how programming is used to make the most advanced underwater robots
+                 in the world at Schilling Robotics / TechnipFMC.</p>
+            </div>
           </div>
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
+        <a class="carousel-control-prev" href="#ecsCarouselIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
+        <a class="carousel-control-next" href="#ecsCarouselIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
