--- a/web2.html
+++ b/web2.html
@@ -92,6 +92,33 @@
     </div>
   </div>
 
+  <div class="container">
+   <h2></h2>
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+     <!-- Indicators -->
+     <ol class="carousel-indicators">
+       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+     </ol>
+
+     <!-- Wrapper for slides -->
+     <div class="carousel-inner">
+       <div class="carousel-item active">
+         <img src="./Images/web1_2_resized/clemmonspresent.jpg" alt="Clemmons Presentation" style="width:100%;">
+       </div>
+
+
+     <!-- Left and right controls -->
+     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+     </a>
+     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+   </div>
+  </div>
+
   <br>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
