--- a/indcon.html
+++ b/indcon.html
@@ -45,7 +45,7 @@
 
   <div class="container">
     <div class="jumbotron">
-      <br><br><br><br><br>
+      <br><br><br><br><br><br><br>
     </div>
     <h2 class="class-header">Industry Connections</h2>
     <br>
@@ -55,7 +55,9 @@
       <p class="col-md-4">Email: mrdagler@csfhs.net</p>
       <p class="col-md-4">Voicemail: (916) 714-8150 x 41912</p>
     </div>
+   </div>
 
+  <div class="container">
     <div class="row">
       <div class="col-md-5">
         <img src="./Images/pride.png" alt="Wildcat PRIDE" class="Pride">
