--- a/web2.html
+++ b/web2.html
@@ -45,7 +45,7 @@
 
   <div class="container">
     <div class="jumbotron">
-      <br><br><br><br><br>
+      <br><br><br><br><br><br><br>
     </div>
     <h2 class="class-header">Web Design and Development 2</h2>
     <br>
@@ -97,13 +97,36 @@
    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
      <!-- Indicators -->
      <ol class="carousel-indicators">
-       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+       <li data-target="#web1CarouselIndicators" data-slide-to="0" class="active"></li>
+       <li data-target="#web1CarouselIndicators" data-slide-to="1"></li>
+       <li data-target="#web1CarouselIndicators" data-slide-to="2"></li>
      </ol>
 
      <!-- Wrapper for slides -->
      <div class="carousel-inner">
        <div class="carousel-item active">
          <img src="./Images/web1_2_resized/clemmonspresent.jpg" alt="Clemmons Presentation" style="width:100%;">
+         <div class="carousel-caption d-none d-md-block transbox">
+           <p>Mac Clemmons, CEO of Digital, talks about his computer science path, his company,
+              the tools you need to be a web developer, what he looks for in new employees,
+              and the successful steps he takes to develop and maintain a website for customers. </p>
+         </div>
+       </div>
+
+       <div class="carousel-item">
+         <img src="./Images/web1_2_resized/p5js.png" alt="Processing Intuition Times Javascipt Power" style="width:100%;">
+         <div class="carousel-caption d-none d-md-block transbox">
+           <p>Student learn p5.js, a JavaScript library that makes coding accessible for artists, designers,
+             educators, and beginners, and reinterprets this for today’s web with a guest speaker.  </p>
+         </div>
+       </div>
+
+       <div class="carousel-item">
+         <img src="./Images/web1_2_resized/HackerLab.png" alt ="Hacker Lab" style="width:100%">
+         <div class="carousel-caption d-none d-md-block transbox">
+           <p>Our students join two local programmers at the Hacker Lab
+              to learn how to write code that has an Avatar interact with his/her environment. </p>
+         </div>
        </div>
 
 
