--- a/ecs.html
+++ b/ecs.html
@@ -114,7 +114,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./Images/ec_resized/cstemday.jpg" alt="CSTEM Day" style="width:100%;">
-            <div class="carousel-caption d-none d-md-block transbox">
+            <div class="carousel-caption d-none d-md-block transbox top">
               <p>One of the best ways to learn something is to teach it.
                 Our students get this opportunity at our annual 5th/6th C-STEM day where
                 my students create lessons, design activities,
